<resources>
    <string name="app_name" translatable="false">MHealth4T2D</string>
    <string name="label_login">Login</string>
    <string name="label_email" translatable="false">Email</string>
    <string name="placeholder_email">Insert here your email</string>
    <string name="label_keep_logged">Keep Logged?</string>
    <string name="label_no_account">Don\'t have an account?</string>
    <string name="label_signup">Sign Up</string>
    <string name="placeholder_password">Insert here your password</string>
    <string name="label_password">Password</string>
    <string name="error_networkerror">Cannot connect to Internet.\nPlease check your connection!</string>
    <string name="error_servererror">Unexpected server error. Please try again after some time!!</string>
    <string name="error_parsingerror">Parsing error.\nPlease try again later!</string>
    <string name="error_timeouterror">Connection TimeOut.\nPlease check your internet connection!</string>
    <string name="error_defaulterror">Error trying to connect to the server.</string>
    <string name="label_name">Name</string>
    <string name="label_birthdate">Birthdate</string>
    <string name="label_read_accept">I read and accept the</string>
    <string name="label_terms">Terms and Privacy Policy</string>
    <string name="label_confirm_pwd">Confirm Password</string>
    <string name="placeholder_confirm_pwd">Confirm your password</string>
    <string name="label_day">Day</string>
    <string name="label_month">Month</string>
    <string name="label_year">Year</string>
    <string name="placeholder_name">Insert here your name</string>
    <string name="label_gender">Gender</string>
    <string name="error_empty_fields">Empty fields, you must fill every field.</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_confirm_pwd_not_match">Your password doesn\'t match with the confirmation password.</string>
    <string name="error_invalid_date">Invalid date.</string>
    <string name="error_terms_not_accepted">You didn\'t read and accepted the Terms and Privacy Policy.</string>
    <string name="label_initial_quizzes">Initial Quizzes</string>
    <string name="label_quarterly_quizzes">Quarterly Quizzes</string>
    <string name="label_daily_quizzes">Daily Quizzes</string>
    <string name="label_next">Next</string>
    <string name="label_logout">Logout</string>
    <string name="label_settings">Settings</string>
    <string name="label_profile">Profile</string>
    <string name="label_complement">Complement</string>
    <string name="label_close">Close</string>
    <string name="label_open">Open</string>
    <string name="menu_plan">See plan</string>
    <string name="menu_exercises">See exercises</string>
    <string name="menu_goals">See goals</string>
    <string name="label_goals">Goals</string>
    <string name="label_exercises">Exercises</string>
    <string-array name="steps">
        <item>Vigorous Step</item>
        <item>Moderate Step</item>
        <item>Slow Step</item>
    </string-array>

    <string-array name="borg">
        <item>Very Easy</item>
        <item>Easy</item>
        <item>Relatively Easy</item>
        <item>Relatively Tiring</item>
        <item>Tiring</item>
        <item>Very Tiring</item>
        <item>Exhausting</item>
    </string-array>
    <string name="menu_register_exercises">Register Exercises</string>
    <string name="label_users">Users</string>
    <string name="menu_users">See Users</string>
    <string name="label_title">Title</string>
    <string name="placeholder_title">Insert here the title</string>
    <string name="label_description">Description</string>
    <string name="placeholder_description">Insert here the description of the exercise</string>
    <string name="label_image_link">Image (link)</string>
    <string name="placeholder_image_link">Insert here the link to the image</string>
    <string name="label_category">Category</string>
    <string name="placeholder_category">Choose a category</string>
    <string name="label_video_link">Video (link)</string>
    <string name="placeholder_video_link">Insert here the link to the video</string>
    <string name="label_register">Register</string>
    <string name="placeholder_genders">Choose your gender</string>
    <string name="label_associate_exercise">Associate Exercise</string>
    <string name="label_details">Details</string>
    <string name="label_position">Position</string>
    <string name="label_goal_steps">Steps goal</string>
    <string name="label_goal_sleep">Sleep goal</string>
    <string name="label_goal_kal">Kalories goal</string>
    <string name="label_choose_exercise">Choose a Exercise</string>
    <string name="label_exercise">Exercise</string>
    <string name="label_user">User</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_associate">Associate</string>
    <string name="menu_edit_exercises">Edit Exercises</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string-array name="empty_array">
        <item />
    </string-array>
    <string name="label_image">Illustrative image</string>
    <string name="label_video">Illustrative video</string>
    <string name="label_click_link">Click the link to see the video</string>

</resources>