<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_register_exercises"
            android:title="@string/menu_register_exercises"
            android:icon="@drawable/ic_exercise" />

        <item android:id="@+id/nav_edit_exercises"
            android:title="@string/menu_edit_exercises"
            android:icon="@drawable/ic_edit" />

        <item android:id="@+id/nav_see_users"
            android:title="@string/menu_users"
            android:icon="@drawable/ic_group" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/label_profile"
            android:icon="@drawable/ic_profile" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/label_settings"
            android:icon="@drawable/ic_settings"
            android:enabled="false"/>

    </group>

</menu>