<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_plan"
            android:title="@string/menu_plan"
            android:icon="@drawable/ic_plan"
            android:checked="true"/>

        <item android:id="@+id/nav_exercises"
            android:title="@string/menu_exercises"
            android:icon="@drawable/ic_exercise" />

        <item android:id="@+id/nav_goals"
            android:title="@string/menu_goals"
            android:icon="@drawable/ic_goals"
            android:enabled="false"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/label_profile"
            android:icon="@drawable/ic_profile" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/label_settings"
            android:icon="@drawable/ic_settings"

            android:enabled="false"/>

    </group>

</menu>