<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_user"
    app:startDestination="@+id/nav_plan">

    <fragment
        android:id="@+id/nav_plan"
        android:name="com.example.mhealth4t2d.Fragments.PlanFragment"
        android:label="@string/menu_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/nav_exercises"
        android:name="com.example.mhealth4t2d.Fragments.ExercisesFragment"
        android:label="@string/menu_exercises"
        tools:layout="@layout/fragment_exercises" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="com.example.mhealth4t2d.Fragments.GoalsFragment"
        android:label="@string/menu_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mhealth4t2d.Fragments.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mhealth4t2d.Fragments.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>