<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_admin"
    app:startDestination="@+id/nav_register_exercises">

    <fragment
        android:id="@+id/nav_register_exercises"
        android:name="com.example.mhealth4t2d.Fragments.RegisterExercisesFragment"
        android:label="@string/menu_register_exercises"
        tools:layout="@layout/fragment_register_exercises" />

    <fragment
        android:id="@+id/nav_edit_exercises"
        android:name="com.example.mhealth4t2d.Fragments.EditExercisesFragment"
        android:label="@string/menu_edit_exercises"
        tools:layout="@layout/fragment_edit_exercises" />

    <fragment
        android:id="@+id/nav_see_users"
        android:name="com.example.mhealth4t2d.Fragments.SeeUsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_see_users" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mhealth4t2d.Fragments.ProfileFragment"
        android:label="@string/label_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mhealth4t2d.Fragments.SettingsFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>